# cxx-automake-lib-and-main

./: .gitignore  Makefile.am  README.md  configure.ac
include/: Makefile-files
include/helloworld/: helloworld
lib/: Makefile-files  helloworld.cpp
src/: Makefile-files  main.cpp
